--- a/angular.json
+++ b/angular.json
@@ -20,8 +20,10 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/_redirects"
             ],
+           
             "styles": [
               "src/styles.css"
             ],
